src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_div_vector2.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.div(&Vector2::new(5.0, 15.0).into())"
---
Vector2:
  - 2
  - 0.6666667
