src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_div_vector2int16.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.div(&Vector2int16::new(5, 15).into())"
---
Vector2int16:
  - 2
  - 0
