src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_floor_div_udim2.snap
---
source: src/math_ops/float32.rs
expression: "16.2f32.floor_div(&UDim2::new(UDim::new(5.23, 32),\nUDim::new(5.23, 32)).into())"
---
UDim2:
  - - 3
    - 0
  - - 3
    - 0
