src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_floor_div_vector2.snap
---
source: src/math_ops/float32.rs
expression: "16.2f32.floor_div(&Vector2::new(5.0, 15.0).into())"
---
Vector2:
  - 3
  - 1
