src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_floor_div_vector3.snap
---
source: src/math_ops/float32.rs
expression: "16.2f32.floor_div(&Vector3::new(5.0, 10.0, 15.0).into())"
---
Vector3:
  - 3
  - 1
  - 1
