src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_floor_div_vector3int16.snap
---
source: src/math_ops/float32.rs
expression: "16.2f32.floor_div(&Vector3int16::new(5, 10, 15).into())"
---
Vector3int16:
  - 3
  - 1
  - 1
